...
private fun DetailsView(beer: Beer) {
    Column(
        modifier = Modifier
            .fillMaxSize()
            .padding(all = 16.dp)
            .verticalScroll(rememberScrollState())
            .testTag("DetailsTag")
    ) {
        Header(beer)
        Spacer(modifier = Modifier.size(24.dp))
        Description(beer)
        Spacer(modifier = Modifier.size(24.dp))
        Ingredients(beer)
...
